--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.9"
 django = "^4.1.2"
 pillow = "^9.2.0"
 django-dotenv = "^1.4.2"
+djangorestframework = "^3.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
